# bstew

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini
benchmarks/: __init__.py  baseline_performance.py  regression_detection.py
configs/: default.yaml
configs/species/: bumblebee_terrestris.yaml  honey_bee.yaml  multi_species.yaml
data/landscapes/: Fowey_Landscape_LargeQ1_Foodsources.txt  _SYSTEM_Example_Farm_Foodsources.txt
data/parameters/: Fowey_Landscape_LargeQ1_Parameters.csv  _SYSTEM_BumbleSpecies_UK_01.csv  _SYSTEM_Example_Farm_Parameters.csv  (+3 more)
docs/: guide.md
examples/: comprehensive_integration_test.py  gis_integration_example.py  interactive_analysis_example.py  live_visualization_example.py  simulation_config.yaml  species_configuration_examples.py
scripts/: netlogo_csv_cli.py  test_dynamic_parameters.py  test_health_monitoring.py  test_netlogo_csv.py  test_post_mortem_analysis.py
tests/: __init__.py  conftest.py  test_beemodel_methods.py  test_benchmarks.py  test_biological_accuracy_validation.py  test_bumblebee_behaviors.py  test_cli.py  test_cli_core.py  test_components.py  test_config_error_messages.py  test_css_enhanced_margins.py  test_css_wildflower_strips.py  test_data_analysis_fixes.py  test_data_analysis_functions.py  test_development_system.py  test_economics.py  test_economics_cli.py  test_empty_results_handling.py  test_exceptions.py  test_file_output_locations_simple.py  test_flower_community_layers.py  test_foraging_distances.py  test_habitat_creation.py  test_habitat_modifications.py  test_integration.py  test_landscape_modification.py  test_masterpatch_system.py  test_metoffice_integration.py  test_mortality_tracking.py  test_netlogo_integration.py  test_netlogo_test_command.py  test_netlogo_validation.py  test_netlogo_validation_integration.py  test_plot_fixes.py  test_predation_system.py  test_proboscis_matching.py  test_proboscis_matching_enhanced.py  test_pydantic_logger_fix.py  test_run_parallel.py  test_runtime_parameter_functions.py  (+6 more)
(+168 files in other folders)
